<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/popup_background">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Import_view"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery_view"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_btn" />
</LinearLayout>
