<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="#004F39">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="169dp"
        android:layout_height="59dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/inter_medium"
        android:text="@string/continue_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:iconPadding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner2" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:padding="10dp"
        android:background="@drawable/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView14" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/signup_text"
        android:textColor="#FEFACA"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="230dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/as_text"
        android:textColor="#FEFACA"
        android:shadowRadius="8"
        android:shadowDy="9"
        android:shadowColor="@color/black"
        android:textSize="65sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView13" />
</androidx.constraintlayout.widget.ConstraintLayout>